[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/level/Stone/go through stone 1.png" type="Texture" id=1]
[ext_resource path="res://assets/level/Stone/go through stone 5.png" type="Texture" id=2]
[ext_resource path="res://assets/level/Stone/go through stone 6.png" type="Texture" id=3]
[ext_resource path="res://assets/level/Stone/go through stone 2.png" type="Texture" id=4]
[ext_resource path="res://assets/level/Stone/go through stone 3.png" type="Texture" id=5]
[ext_resource path="res://assets/level/Stone/go through stone 4.png" type="Texture" id=6]
[ext_resource path="res://WaterTPer.gd" type="Script" id=7]

[sub_resource type="CircleShape2D" id=2]
radius = 47.0106

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": false,
"name": "Flowing",
"speed": 12.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": false,
"name": "default",
"speed": 1.0
} ]

[node name="WaterTPer" type="Node2D"]
script = ExtResource( 7 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -146, -51 )
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2( 120, -65 )
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( -180, -13, -14, -254, 12, -266, 29, -264, 62, -229, 98, -148, 107, -113, 163, 0, 163, 13, -184, 14 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -199 )
scale = Vector2( 0.194336, 0.194336 )
frames = SubResource( 1 )
animation = "Flowing"

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_entered" from="Area2D2" to="." method="_on_Area2D2_area_entered"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
